--- a/app/contact/partial_contact.scss
+++ b/app/contact/partial_contact.scss
@@ -2,12 +2,13 @@
 
 
 .inputBox {
-	width: 500px; height: 250px; border: 1px solid #999999; padding: 5px;
+	width: 700px; height: 250px; border: 1px solid #999999; padding: 5px;
 }
 .nameBox {
-	width: 500px; height: 30px; border: 1px solid #999999; padding: 5px;
+	width: 700px; height: 30px; border: 1px solid #999999; padding: 5px;
 
 }
+
 
 textarea {
 	resize: none;
@@ -46,4 +47,5 @@ button:active {
 .globalwrapper {
 	display: inline-block;
 	text-align: center;
+	width: 75%;
 }
