Reworked the People tab.

--- a/app/css/_app.scss
+++ b/app/css/_app.scss
@@ -7,7 +7,7 @@ $black: #000000;
 
 // ----- KTH specifics -----
 $kth-color-blue: #2258A5; // #0064B0
-$kth-color-light-blue: #24A0D8;
+$kth-color-light-blue: #2E7CC0;
 $kth-color-green: #B0C92A;
 $kth-color-grey: #65656C;
 
