--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -5,7 +5,7 @@
 	font-size: 1.5rem;
 }
 select {
-  width: 101rem;
+  width: 90rem; // from 101
   height: 4rem;
 	padding: 5rem $kth-color-grey;
 	margin-left: 1rem;
@@ -34,15 +34,15 @@ p {
 }
 textarea {
 	margin-left: 1rem;
-	width: 100rem;
+	width: 90rem;	// from 100
 	height: 30rem;
 	resize: none;
 	padding: 50rem $kth-color-grey;
 }
 
 button {
-	margin-left: 93rem;
-	width: 8rem;
+	margin-left: 81.5rem; // from 93
+	width: 9rem;
 	height: 3rem;
-	margin-top: 0.5rem;
+	margin-top: 0.3rem;
 }
