--- a/app/map/map.scss
+++ b/app/map/map.scss
@@ -7,5 +7,19 @@
   margin:auto;
   padding:40px;
   z-index:1;
+
+  .map-and-search{
+  	float:left;
+    width:80%;
+    margin:0;
+    padding:0;
+  }
+  .common-places{
+  	float:right;
+    width:20%;
+    margin:0;
+    padding:0;
+  }
+
 }
 
