--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -85,7 +85,8 @@ a {
     left: 0;
     background-color: rgba(0, 0, 0, .7);
     width: 100%;
-    height: 100%
+    height: 100%;
+    z-index:10;
 }
 
 .popup-wrapper {
