--- a/app/map/map.scss
+++ b/app/map/map.scss
@@ -1,25 +1,22 @@
-.maps{
-  height:650px;
-  width:100%;
-}
-.wrapper{
-  width:60%;
-  margin:auto;
-  padding:40px;
-  z-index:1;
 
-  .map-and-search{
-  	float:left;
-    width:80%;
+.wrapper{
+  width:70%;
+  height:100%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:0;
+  z-index:1;
+  background-color: blue;
+  postion:absolute;
+
+   .maps{
+    height:60rem;
+    width:100%;
     margin:0;
     padding:0;
-  }
-  .common-places{
-  	float:right;
-    width:20%;
-    margin:0;
-    padding:0;
-  }
+    z-index:0;
+}
+ 
 
 }
 
