added support for view address from find-person

--- a/app/map/map.scss
+++ b/app/map/map.scss
@@ -10,13 +10,12 @@
   postion:absolute;
 
    .maps{
-    height:60rem;
+    height:100%;
     width:100%;
     margin:0;
     padding:0;
     z-index:0;
 }
- 
 
 }
 
