--- a/app/find-person/find-person.css
+++ b/app/find-person/find-person.css
@@ -76,7 +76,8 @@ a {
   z-index: 99999;
   background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  z-index: 10; }
 
 .popup-wrapper {
   width: 1000px;
