--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #1a54a6;
+  background-color: $kth-color-blue;
 
   .main_header_title {
     margin-left:2rem;
