--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -17,20 +17,29 @@ select {
 	text-align: center;
 }
 
-.dropDown {
+/* .dropDown {
 	margin-bottom: 1rem;
 	margin-top: 1rem;
 }
+*/
 
+/*
 .textArea {
 	font-size: 1.2rem;
 	margin-left: 20.5rem;
 	margin-bottom: 3rem;
 }
+*/
 
-p {
+label {
 	font-size: 1.2rem;
-	margin-left: 20.5rem;
+	margin-left: 1rem;
+}
+
+input {
+	margin-left: 1rem;
+	padding: 50rem $kth-color-grey;
+
 }
 textarea {
 	margin-left: 1rem;
