Added address search funtionality and did general cleaning of all map related componenets

--- a/app/map/autocomplete.scss
+++ b/app/map/autocomplete.scss
@@ -9,6 +9,13 @@
 		height:4rem;
 		
 	}
+	 .selectButton{
+      width:6rem;
+      height:4rem;
+      background-color:blue;
+      z-index:3;
+      float:right;
+    }
 	.suggestions{
 			border:solid 1px #f1f1f1;
 			position:absolute;
