--- a/app/map/map.scss
+++ b/app/map/map.scss
@@ -10,12 +10,11 @@
   postion:absolute;
 
    .maps{
-    height:100%;
+    height:66rem;
     width:100%;
     margin:0;
     padding:0;
     z-index:0;
-}
-
+  } 
 }
 
