Added About me height in the person-profile.
This is not a very nice solution because it cuts of the text mid
sentence.

--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -148,6 +148,8 @@ a {
 .popup-person-about {
     font-size: 0.75em;
     color: #000;
+    height: 10.3rem;
+    overflow: hidden;
 }
 
 .popup-person-about p {
