--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -2,14 +2,20 @@
 
 
 * {
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 }
 
 p {
 	color: #FF0000;
 	font-size: 1rem;
 }
+h1 {
+	text-align: center;
+}
 
+.wrapper1 {
+
+}
 
 label {
 	font-size: 1.2rem;
@@ -18,10 +24,9 @@ label {
 
 textarea {
 	margin-left: 1rem;
-	width: 90rem;	// from 100
+	width: 80rem;	// from 100
 	height: 10rem;
 	resize: none;
-	padding: 50rem $kth-color-grey;
 }
 
 .msgError {
