Various styling fixes for the Contact tab.

--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -1,20 +1,18 @@
 @import "../css/app.scss";
 
-
-* {
-	font-size: 1.3rem;
-}
-
 p {
 	color: #FF0000;
 	font-size: 1rem;
 }
+
 h1 {
 	text-align: center;
 }
 
-.wrapper1 {
-
+.wrapper {
+	display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 label {
@@ -23,16 +21,15 @@ label {
 }
 
 textarea {
+	border-radius: 10px;
 	margin-left: 1rem;
-	width: 80rem;	// from 100
+	width: 60rem;
 	height: 10rem;
 	resize: none;
 }
 
 .msgError {
 	margin-left: 20rem;
-
-
 }
 
 .emailError {
@@ -40,44 +37,17 @@ textarea {
 }
 
 .buttonArea {
-	//margin-left: 81.5rem; // from 93
 	float: right;
 	margin-right: 2rem;
-
 }
+
 button {
 	width: 9rem;
 	height: 3rem;
 	margin-top: 0.3rem;
 }
+
 input {
 	margin-left: 1rem;
-	padding: 50rem $kth-color-grey;
+	border-radius: 10px;
 }
-
-
-// DROPDOWN SHIT
-
-/*
-select {
-  width: 90rem; // from 101
-  height: 4rem;
-	padding: 5rem $kth-color-grey;
-	margin-left: 1rem;
-}
- */
-
-
- /*
- .dropDown {
- 	margin-bottom: 1rem;
- 	margin-top: 1rem;
- }
-
-
- .textArea {
- 	font-size: 1.2rem;
- 	margin-left: 20.5rem;
- 	margin-bottom: 3rem;
- }
-*/
