--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -34,7 +34,7 @@
     border-bottom: 1px groove #A9A9A9;
 
     .icon {
-      padding:10px; 
+      padding:10px;
       text-align: center;
       width:150px;
       margin-left: auto;
@@ -79,7 +79,7 @@
 
 #footer {
   background: url("app/main-frame/images/footer.png");
-  position:absolute;
+  position:fixed;
   bottom:0;
   width:100%;
   height:2.5rem;   /* Height of the footer */
