--- a/app/setup-process/setup-process.scss
+++ b/app/setup-process/setup-process.scss
@@ -1,1 +1,67 @@
 @import "../css/app.scss";
+
+a {
+	text-decoration: none;
+}
+
+table tr td:first-child {
+	width: 30em;
+}
+
+.item {
+	vertical-align: top;
+	display: block;
+	margin-top: 1em;
+	padding-bottom: 1em;
+}
+
+.item p {
+	margin: 0 0 0.5em 0;
+}
+
+.item td {
+	padding: 0 1em 0 1em;
+}
+
+.item input, .item textarea {
+	width: 100%;
+	resize: vertical;
+	padding: 0.2em;
+}
+
+.qmark {
+	font-family: Arial;
+	font-size: 2.2em;
+	background-color: #169fdb;
+	border-radius: 50%;
+	width: 1.5em;
+	margin-top: 0.1em;
+	height: 1.5em;
+	color: #fff;
+	text-align: center;
+	font-weight: bold;
+	line-height: 150%;
+}
+
+#setup {
+	height: 100%;
+	overflow: auto;
+}
+
+#setup h5 {
+	font-size: 2em;
+	margin-left: 0.50em;
+}
+
+.info {
+	padding: 1em !important;
+	background-color: #f2f2f2;
+	width: auto;
+}
+
+.button {
+	margin-left: 1rem;
+	font-size: 1.2em;
+	line-height: 2em;
+	width: 5em;
+}
