Fixed css styling

--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -2,7 +2,7 @@
 
 .home_container{
   overflow: hidden;
-  //background-color: red;
+//  background-color: red;
   width:70%;
   height:100%;
   margin-top:1rem;
@@ -16,10 +16,9 @@
     margin-left:1%;
     float:left;
     .article.standard{
-      //background-color: blue;
-      font:200%;
+    //  background-color: green;
       .paragraphs{
-        //background-color: blue
+      //  background-color: blue;
         .block.list.group.defaultTheme:nth-of-type(1){
           .teaserText{
             background-color: #ee277d;
@@ -27,14 +26,16 @@
         }
         .block.list.group.defaultTheme:nth-of-type(2){
           .teaserText{
-            background-color: #fab819;
+          background-color: #fab819;
             p{
+              font-size: 50%;
               float:right;
             }
             h2{
+              font-size:50%;
               float:right;
             }
-            .imageWrapper{
+            .teaserImage{
               float:left;
             }
           }
@@ -46,10 +47,17 @@
         }
         .teaserTextInner{
           color:white;
+          height:100%;
+          width:100%;
+
+        }
+        .teaserText{
+          color:white;
           height:15rem;
           margin-bottom:0.5rem;
         }
         h2{
+          margin-top:0;
           padding:0.7rem 0.7rem 0.7rem 0.7rem;
           margin-bottom:0;
           display:inline;
@@ -57,18 +65,38 @@
           width:50%;
           box-sizing: border-box;
           display:inline-block;
+          //background-color:blue;
+        }
+        h3.topic{
+          //background-color: black;
+          padding:0rem 0.7rem 0.7rem 0.7rem;
+          margin-bottom:0;
+          display:inline;
+          float:left;
+          width:50%;
+          box-sizing: border-box;
+          display:inline-block;
+
         }
         p{
+          //background-color: yellow;
           margin-top:0;
-          padding:0 0.7rem 0.7rem 0.7rem;
-          font-size:16px;
+          padding:0.7rem 0.7rem 0.7rem 0.7rem;
+          font-size:13px;
           width:50%;
           float:left;
           box-sizing: border-box;
         }
-        .imageWrapper{
+        .mainLink{
+          padding:0.7rem 0.7rem 0.7rem 0.7rem;
+        }
+        .overlayWrapper{
+          margin:0;
+          padding:0;
+        }
+        .teaserImage{
           width:50%;
-          height:100%;
+          height:15rem;
           float:right;
           margin:0;
           padding:0;
@@ -107,5 +135,5 @@
 .block.calendar .date.startDay { text-transform: capitalize; }
 .block.calendar .calendarContent { padding: 2px 0; }
 
-.block.teaser.top.image .teaserText { padding: 10px 0px 0px 0px; margin: 0px; background-color:blue;}
+//.block.teaser.top.image .teaserText { padding: 10px 0px 0px 0px; margin: 0px; background-color:blue;}
 //.article .paragraphs .block.list.group { margin-bottom: 15px; background-color:blue;}
