Changed font color of buttons and disabled pinch zoom on leaflet map

--- a/app/map/styles/search-bar.scss
+++ b/app/map/styles/search-bar.scss
@@ -18,7 +18,7 @@
       background-color:blue;
       z-index:3;
       float:right;
-			color:white;
+			color:black;
 			text-align:center;
 			vertical-align: middle;
 			h3{
