--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -1,6 +1,6 @@
 @import "../css/app.scss";
 
-.home_container{
+:host>>>.home_container{
   overflow: hidden;
 //  background-color: red;
   width:70%;
@@ -30,7 +30,7 @@
         .block.list.group.defaultTheme:nth-of-type(2){
           .teaserText{
           background-color: #fab819;
-          
+
           }
         }
         .block.list.group.defaultTheme:nth-of-type(3){
@@ -116,20 +116,20 @@
 
 
 
-.block.calendar { padding: 0px 0px 10px 0px; margin: 0px; display: block; overflow: hidden; max-width: 100%; }
-.block.calendar h3 { font-size: 16px; font-size: 1.6rem; color: #ffffff; font-weight: bold; padding: 0px 10px 0px 10px; margin: 0px; background: #b0c92b; padding: 5px; line-height: 21px; }
-.block.calendar .listing { padding: 0px; margin: 0px; }
-.block.calendar .listing li .vevent { padding: 5px 0px 5px 0px; margin: 0px; }
-.block.calendar .listing li:last-child { border-bottom: none; }
-.block.calendar .listing li:first-child { padding-top: 0px; margin-top: 0px; }
-.block.calendar .listing .odd { list-style: none; padding-left: 0px; margin-left: 0px; border-bottom: 1px solid #b9bbbd; }
-.block.calendar .listing .empty { padding: 5px 0; }
-.block.calendar .calendarDepartment { padding-top: 10px; padding-left: 10px; }
-.block.calendar .topic { padding: 5px 0px 0px 0px; margin: 0px; font-size: 13.5px; font-size: 1.35rem; color: #98ad29; font-weight: normal; line-height: auto; text-transform: uppercase; }
-.block.calendar .date.day { font-size: 28px; font-size: 2.8rem; font-family: 'Georgia Regular', 'Georgia', 'garamond pro', garamond, 'times new roman', times, serif, 'droid sans'; color: #111111; }
-.block.calendar .date.month { font-size: 19px; font-size: 1.9rem; font-family: 'Georgia Regular', 'Georgia', 'garamond pro', garamond, 'times new roman', times, serif, 'droid sans'; color: #111111; display: inline; }
-.block.calendar .date.startDay { text-transform: capitalize; }
-.block.calendar .calendarContent { padding: 2px 0; }
+:host>>>.block.calendar { padding: 0px 0px 10px 0px; margin: 0px; display: block; overflow: hidden; max-width: 100%; }
+:host>>>.block.calendar h3 { font-size: 16px; font-size: 1.6rem; color: #ffffff; font-weight: bold; padding: 0px 10px 0px 10px; margin: 0px; background: #b0c92b; padding: 5px; line-height: 21px; }
+:host>>>.block.calendar .listing { padding: 0px; margin: 0px; }
+:host>>>.block.calendar .listing li .vevent { padding: 5px 0px 5px 0px; margin: 0px; }
+:host>>>.block.calendar .listing li:last-child { border-bottom: none; }
+:host>>>.block.calendar .listing li:first-child { padding-top: 0px; margin-top: 0px; }
+:host>>>.block.calendar .listing .odd { list-style: none; padding-left: 0px; margin-left: 0px; border-bottom: 1px solid #b9bbbd; }
+:host>>>.block.calendar .listing .empty { padding: 5px 0; }
+:host>>>.block.calendar .calendarDepartment { padding-top: 10px; padding-left: 10px; }
+:host>>>.block.calendar .topic { padding: 5px 0px 0px 0px; margin: 0px; font-size: 13.5px; font-size: 1.35rem; color: #98ad29; font-weight: normal; line-height: auto; text-transform: uppercase; }
+:host>>>.block.calendar .date.day { font-size: 28px; font-size: 2.8rem; font-family: 'Georgia Regular', 'Georgia', 'garamond pro', garamond, 'times new roman', times, serif, 'droid sans'; color: #111111; }
+:host>>>.block.calendar .date.month { font-size: 19px; font-size: 1.9rem; font-family: 'Georgia Regular', 'Georgia', 'garamond pro', garamond, 'times new roman', times, serif, 'droid sans'; color: #111111; display: inline; }
+:host>>>.block.calendar .date.startDay { text-transform: capitalize; }
+:host>>>.block.calendar .calendarContent { padding: 2px 0; }
 
 //.block.teaser.top.image .teaserText { padding: 10px 0px 0px 0px; margin: 0px; background-color:blue;}
 //.article .paragraphs .block.list.group { margin-bottom: 15px; background-color:blue;}
