Updated popup marker texts with roomtype and floor. Added a center button to the map, solved a graphical error when error message was showing. The search function now displays Nicknames(ex Fantum) and roomcodes for locations that has a nickname. Also included more roomtypes when searching

--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -5,7 +5,7 @@ h1, h2 {
 	text-align: center;
 }
 
-.wrapper {
+.contact_wrapper {
 	display: flex;
   flex-direction: column;
   justify-content: center;
