--- a/app/map/styles/search-bar.scss
+++ b/app/map/styles/search-bar.scss
@@ -10,19 +10,25 @@
 		width:30rem;
 		height:4rem;
 		border-radius: 1rem 0  0 1rem;
+		display: inline-block;
+		position: relative;
+
 
 	}
 	 .selectButton{
+		 left: 0;
+		 margin-top:-15px;
+		 margin-left:-10px;
+		 display: inline-block;
+		 position: relative;
       width:6rem;
       height:4rem;
-      background-color:blue;
       z-index:3;
-      float:right;
 			color:black;
 			text-align:center;
 			vertical-align: middle;
 			h3{
-				margin-top:1.5rem;
+				margin-top:1.38rem;
 			}
 
     }
@@ -59,12 +65,11 @@
 			background-color:white;
 		}
 		.school-wrapper{
-			//background-color:red;
 			position:fixed;
 			margin-top:0;
 		    width:auto;
 		    height:auto;
-		    margin-left:42rem;
+		    margin-left:41rem;
 		    .left-wrapper{
 		    	background-color:white;
 		    	float:left;
