--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -1,21 +1,32 @@
 @import "../css/app.scss";
 
 // -------- Header styles --------
-.main_frame_header {
+.main-frame-header {
   display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  background-color: $kth-color-blue;
 
-  .main_header_title {
-    margin-left:2rem;
-    max-width: 50%;
-    font: $kth-font-title;
-    font-weight: lighter;
-    color: $white;
-    font-size: 400%;
+  .icon {
+    width: 8%;
+    margin: 1rem;
   }
+
+  .main-header-title {
+    max-width: 50%;
+    display: flex;
+    align-items: center;
+    h1 {
+      color: $kth-color-blue;
+      font: $kth-font-title;
+      font-weight: lighter;
+      font-size: 500%;
+    }
+  }
+}
+
+.header-border {
+  width: 100%;
+  height: 0.5%;
+  background-color: $kth-color-blue;
 }
 
 // -------- Sidebar styles --------
