--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -5,13 +5,18 @@
   display: flex;
   width: 100%;
 
-  .icon {
-    width: 8%;
-    margin: 1rem;
+  .icon-wrapper {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    .icon {
+      width: 8vw;
+      margin: 1rem;
+    }
   }
 
   .main-header-title {
-    max-width: 50%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     h1 {
@@ -45,11 +50,8 @@
     border-bottom: 1px groove #A9A9A9;
 
     .icon {
-      padding:10px;
+      padding:1rem;
       text-align: center;
-      width:150px;
-      margin-left: auto;
-      margin-right: auto;
     }
   }
 }
