--- a/app/map/styles/search-bar.scss
+++ b/app/map/styles/search-bar.scss
@@ -1,30 +1,31 @@
 @import "../../css/app.scss";
 
 .search_bar_wrapper{
-	z-index:9;
+	z-index:10;
 	position:absolute;
 	margin:30px;
 	.searchField{
+		border: 1px solid #ccc;
+		left:6rem;
 		padding:1rem;
 		font-size:2.5rem;
 		width:30rem;
 		height:4rem;
-		border-radius: 1rem 0  0 1rem;
-		display: inline-block;
+		//border-radius: 1rem 0 0 1rem;
 		position: relative;
+		box-shadow: inset 1px 1px 2px #b9bbbd;
+
 
 
 	}
 	 .selectButton{
-		 left: 0;
-		 margin-top:-15px;
-		 margin-left:-10px;
+		 color:white;
 		 display: inline-block;
-		 position: relative;
+		 position: absolute;
       width:6rem;
-      height:4rem;
+      height:3.8rem;
+			margin-top:0.15rem;
       z-index:3;
-			color:black;
 			text-align:center;
 			vertical-align: middle;
 			h3{
@@ -33,7 +34,14 @@
 
     }
 		#button2{
+			border-radius:1rem 0 0 1rem;
+		}
+		#button0{
+			left:36rem;
+		}
+		#button1{
 			border-radius:0 1rem 1rem 0;
+			left:42rem;
 		}
 	.suggestions{
 			border:solid 1px #f1f1f1;
@@ -41,6 +49,7 @@
 			width:100%;
 			background: white;
 			z-index:10;
+			left:6rem;
 		}
 		.suggestions ul{
 			margin:0px;
@@ -69,7 +78,6 @@
 			margin-top:0;
 		    width:auto;
 		    height:auto;
-		    margin-left:41rem;
 		    .left-wrapper{
 		    	background-color:white;
 		    	float:left;
@@ -77,7 +85,7 @@
 		    	height:auto;
 				ul{
 					text-align: center;
-			    	list-style-type: none;
+			    list-style-type: none;
 					margin:0px;
 					padding:0px;
 					width:100%;
@@ -94,53 +102,38 @@
 		    }
 		    .right-wrapper{
 		    	height:auto;
-
+					z-index:10;
 		    	float:right;
+					position: relative;
 		    	.dep-col-1{
+						margin-top:0.4rem;
 		    		margin-left:0.4rem;
 		    		background-color:white;
 		    		float:left;
+						z-index:10;
+						position: relative;
 		    		ul{
 		    			text-align: center;
 		    			list-style-type:none;
 		    			margin:0;
 		    			padding:0;
 		    			width:100%;
+							z-index:10;
+							position: relative;
 		    			li{
 		    				padding-top:0.7rem;
-							height:1.8rem;
+								height:1.8rem;
 		    				padding-left:0.3rem;
 		    				padding-right:0.3rem;
 		    				border-top:solid 1px #f1f1f1;
+								z-index:10;
+								position: relative;
 		    			}
 		    			li:hover{
 						background-color:#f1f1f1;
 						}
 		    		}
 		    	}
-		    	.dep-col-2{
-		    		background-color:white;
-		    		margin-left:0.4rem;
-		    		float:right;
-		    			ul{
-		    			text-align: center;
-		    			list-style-type:none;
-		    			margin:0;
-		    			padding:0;
-		    			width:100%;
-		    			li{
-		    				padding-top:0.7rem;
-							height:1.8rem;
-		    				padding-left:0.3rem;
-		    				padding-right:0.3rem;
-		    				border-top:solid 1px #f1f1f1;
-
-		    				}
-		    			li:hover{
-							background-color:#f1f1f1;
-							}
-		    			}
-		    		}
 		    	}
 
 		}
