--- a/app/map/styles/search-bar.scss
+++ b/app/map/styles/search-bar.scss
@@ -1,84 +1,97 @@
 @import "../../css/app.scss";
 
-.search_bar_wrapper{
+.component_wrapper{
 	z-index:10;
 	position:absolute;
-	margin:30px;
-	.searchField{
-		border: 1px solid #ccc;
-		left:6rem;
-		padding:1rem;
-		font-size:2.5rem;
-		width:30rem;
-		height:4rem;
-		//border-radius: 1rem 0 0 1rem;
-		position: relative;
-		box-shadow: inset 1px 1px 2px #b9bbbd;
-
-
-
-	}
-	 .selectButton{
-		 color:white;
-		 display: inline-block;
-		 position: absolute;
-      width:6rem;
-      height:3.8rem;
-			margin-top:0.15rem;
-      z-index:3;
-			text-align:center;
-			vertical-align: middle;
-			h3{
-				margin-top:1.38rem;
-			}
-
-    }
-		#button2{
-			border-radius:1rem 0 0 1rem;
-		}
-		#button0{
-			left:36rem;
-		}
-		#button1{
-			border-radius:0 1rem 1rem 0;
-			left:42rem;
-		}
-	.suggestions{
-			border:solid 1px #f1f1f1;
-			position:absolute;
-			width:100%;
-			background: white;
-			z-index:10;
-			left:6rem;
-		}
-		.suggestions ul{
-			margin:0px;
-			padding:0px;
-			width:100%;
-		}
-		.suggestions ul li{
-			list-style-type: none;
-			width:100%;
+	margin:2rem;
+	.searchField_wrapper{
+		width:18rem;
+		box-shadow: 3px 3px 5px #888888;
+		.searchField{
 			height:3rem;
-			border-bottom:solid 1px #f1f1f1;
+			.search_text_field{
+				border:none;
+				outline-width: 0;
+				padding:1rem;
+				font-size:1.2rem;
+				width:15rem;
+				height:3rem;
+				border-radius: 0 0 0.3rem 0.3rem;
+			}
+			.search_field_image{
+				background-color: #ffffff;
+				width:3rem;
+				height:3rem;
+				float:right;
+				padding:0.7rem;
+				box-sizing: border-box;
+			}
+		}
+		.button_wrapper{
+			display:flex;
+		 .selectButton{
+			 display: inline-block;
+			 margin:0;
+			 color:#ffffff;
+	      width:6rem;
+	      height:3.2rem;
+	      z-index:3;
+				text-align:center;
+				h3{
+					margin-top:1rem;
+					font-size:1rem;
+				}
 
+	    }
+			#button2{
+				border-radius:0.3rem 0 0 0;
+			}
+			#button0{
+				left:7rem;
+			}
+			#button1{
+				border-radius:0 0.3rem 0 0;
+				left:14rem;
+			}
 		}
-		.suggestions ul li a{
-			padding:1rem;
-			display:block;
+		.suggestions{
+				border:solid 1px #f1f1f1;
+				position:absolute;
+				width:99.3%;
+				background: white;
+				z-index:10;
+				left:0rem;
+				box-shadow: 3px 3px 5px #888888;
+
+			}
+			.suggestions ul{
+				margin:0;
+				padding:0;
+				width:100%;
+
+			}
+			.suggestions ul li{
+
+				list-style-type: none;
+				width:100%;
+				border-bottom:solid 1px #f1f1f1;
+			}
+			.suggestions ul li a{
+				padding:1rem;
+				display:block;
+			}
+			.suggestions ul li a:hover{
+				background-color: #f1f1f1;
+			}
+			.error{
+				background-color:white;
+				margin-top:10rem;
+			}
 		}
-		.suggestions ul li a:hover{
-			background-color: #f1f1f1;
-		}
-		.error{
-			background-color:white;
-		}
-		.school-wrapper{
-			position:fixed;
-			margin-top:0;
-		    width:auto;
-		    height:auto;
-		    .left-wrapper{
+		.drop_down_wrapper{
+				position:relative;
+		    .schools_drop_down{
+					box-shadow: 3px 3px 5px #888888;
 		    	background-color:white;
 		    	float:left;
 		    	width:6rem;
@@ -90,8 +103,9 @@
 					padding:0px;
 					width:100%;
 					li{
+						font-size:1rem;
 						padding-top:0.7rem;
-						height:1.8rem;
+						height:1.5rem;
 						border-top:solid 1px #f1f1f1;
 
 					}
@@ -100,17 +114,18 @@
 					}
 			    }
 		    }
-		    .right-wrapper{
+		    .departments_drop_down{
 		    	height:auto;
-					z-index:10;
+					z-index:0;
 		    	float:right;
 					position: relative;
-		    	.dep-col-1{
+		    	.department_drop_down_column{
+						background-color: red;
+						box-shadow: 3px 3px 5px #888888;
 						margin-top:0.4rem;
 		    		margin-left:0.4rem;
 		    		background-color:white;
 		    		float:left;
-						z-index:10;
 						position: relative;
 		    		ul{
 		    			text-align: center;
@@ -118,25 +133,21 @@
 		    			margin:0;
 		    			padding:0;
 		    			width:100%;
-							z-index:10;
 							position: relative;
 		    			li{
-		    				padding-top:0.7rem;
-								height:1.8rem;
+								font-size:1rem;
+		    				padding-top:0.6rem;
+								height:1.4rem;
 		    				padding-left:0.3rem;
 		    				padding-right:0.3rem;
-		    				border-top:solid 1px #f1f1f1;
-								z-index:10;
+		    				border:solid 1px #f1f1f1;
 								position: relative;
 		    			}
 		    			li:hover{
-						background-color:#f1f1f1;
-						}
+								background-color:#f1f1f1;
+							}
 		    		}
 		    	}
-		    	}
-
+		    }
 		}
-
-
 }
