--- a/app/map/styles/search-bar.scss
+++ b/app/map/styles/search-bar.scss
@@ -1,7 +1,7 @@
 @import "../../css/app.scss";
 
 .component_wrapper{
-	z-index:10;
+	z-index:3;
 	position:absolute;
 	margin:2rem;
 	.searchField_wrapper{
@@ -91,8 +91,8 @@
 		.drop_down_wrapper{
 				position:relative;
 		    .schools_drop_down{
+					background-color: #ffffff;
 					box-shadow: 3px 3px 5px #888888;
-		    	background-color:white;
 		    	float:left;
 		    	width:6rem;
 		    	height:auto;
@@ -120,28 +120,24 @@
 		    	float:right;
 					position: relative;
 		    	.department_drop_down_column{
-						background-color: red;
 						box-shadow: 3px 3px 5px #888888;
 						margin-top:0.4rem;
 		    		margin-left:0.4rem;
 		    		background-color:white;
 		    		float:left;
-						position: relative;
 		    		ul{
 		    			text-align: center;
 		    			list-style-type:none;
 		    			margin:0;
 		    			padding:0;
 		    			width:100%;
-							position: relative;
 		    			li{
-								font-size:1rem;
+								font-size:0.9rem;
 		    				padding-top:0.6rem;
 								height:1.4rem;
 		    				padding-left:0.3rem;
 		    				padding-right:0.3rem;
 		    				border:solid 1px #f1f1f1;
-								position: relative;
 		    			}
 		    			li:hover{
 								background-color:#f1f1f1;
