Made the sidebar horizontal lines thicker.

--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -47,7 +47,7 @@
     font: $kth-font-title;
     font-size:120%;
     border-right:solid $kth-color-blue;
-    border-bottom: 1px groove #A9A9A9;
+    border-bottom: 0.3rem solid $kth-color-blue;
 
     .icon {
       padding:1rem;
