Changed application wide font to Arial.
According to KTH graphic guidelines.

--- a/app/css/_app.scss
+++ b/app/css/_app.scss
@@ -14,4 +14,4 @@ $kth-color-grey: #65656C;
 // ----- Global fonts -----
 
 // ----- KTH specifics -----
-$kth-font-title: Helvetica;
+$kth-font-title: Arial;
