--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -91,11 +91,11 @@
 }
 
 #footer {
-  background: url("app/main-frame/images/footer.png");
   position:fixed;
+  height:auto;
   bottom:0;
   width:100%;
-  height:2.5rem;   /* Height of the footer */
+  height:5rem;
 }
 
 .absolute {
