--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -1,112 +1,91 @@
-@import "../css/app.scss";
-
-// -------- Header styles --------
 .main-frame-header {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-
-  .icon-wrapper {
+  justify-content: space-between; }
+  .main-frame-header .icon-wrapper {
     width: 15%;
     display: flex;
-    justify-content: center;
-    .icon {
+    justify-content: center; }
+    .main-frame-header .icon-wrapper .icon {
       width: 8vw;
-      margin: 1rem;
-    }
-  }
-
-  .main-header-title {
+      margin: 1rem; }
+  .main-frame-header .main-header-title {
     display: flex;
-    align-items: center;
-    h1 {
-      color: $kth-color-blue;
-      font: $kth-font-title;
+    align-items: center; }
+    .main-frame-header .main-header-title h1 {
+      color: #2258A5;
+      font: Arial;
       font-weight: lighter;
       font-size: 500%;
-      white-space: nowrap;
-    }
-  }
-
-  .main-header-clock {
+      white-space: nowrap; }
+  .main-frame-header .main-header-clock {
     align-self: flex-end;
-    color: $kth-color-blue;
-    padding-right: 0.5rem;
-  }
-}
+    color: #2258A5;
+    padding-right: 0.5rem; }
 
 .header-border {
   width: 100%;
   height: 0.5%;
-  background-color: $kth-color-blue;
-}
+  background-color: #2258A5; }
 
-// -------- Sidebar styles --------
 .sidebar {
-  position:relative;
+  position: relative;
   list-style: none;
-  margin:0;
-  padding:0;
-  width:15%;
-  float:left;
-
-  .sidebar-item {
-    font: $kth-font-title;
-    font-size:120%;
-    border-right:solid $kth-color-blue;
-    border-bottom: 0.2rem solid $kth-color-blue;
-
-    .icon {
-      padding:1rem;
-      text-align: center;
-    }
-  }
-}
+  margin: 0;
+  padding: 0;
+  width: 15%;
+  float: left; }
+  .sidebar .sidebar-item {
+    font: Arial;
+    font-size: 120%;
+    border-right: solid #2258A5;
+    border-bottom: 0.2rem solid #2258A5; }
+    .sidebar .sidebar-item .icon {
+      padding: 1rem;
+      text-align: center; }
 
 .sidebar-filler {
-  height:100%;
-  border-right:solid $kth-color-blue;
-}
+  height: 100%;
+  border-right: solid #2258A5; }
 
 .contact_field {
-    position:relative;
-    font-size:120%;
-    float: right;
-    height:100%;
-    width:15%;
-    border-left:solid $kth-color-blue ;
-    z-index:0;
-    margin:0;
-    box-sizing: border-box;
-
-    .inner_contact_field {
-      margin:1rem;
-    }
-
-    h2 {
-      font: $kth-font-title;
-      color: $kth-color-green;
-    }
-    .open-hrs {
-      width:100%;
-      span {
-        text-align:right;
-        float:right;
-        margin-right:100px;
-      }
-    }
-}
+  position: relative;
+  font-size: 120%;
+  float: right;
+  height: 100%;
+  width: 15%;
+  border-left: solid #2258A5;
+  z-index: 0;
+  margin: 0;
+  box-sizing: border-box; }
+  .contact_field .inner_contact_field {
+    margin: 1rem; }
+  .contact_field h2 {
+    font: Arial;
+    color: #B0C92A; }
+  .contact_field .open-hrs {
+    width: 100%; }
+    .contact_field .open-hrs span {
+      text-align: right;
+      float: right;
+      margin-right: 100px; }
 
 #footer {
-  position:fixed;
-  height:auto;
-  bottom:0;
-  width:100%;
-  height:5rem;
-}
+  font: Arial;
+  background-image: url("app/main-frame/images/footer.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: fixed;
+  height: auto;
+  bottom: 0;
+  width: 100%;
+  height: 5rem; }
+  #footer .footer_text {
+    font: Arial;
+    margin-left: 31%;
+    color: #ffffff; }
 
 .absolute {
-  z-index:0;
-}
+  z-index: 0; }
 
-// ----------------
+/*# sourceMappingURL=main-frame.scss.map */
